--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "servicenow-react-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://dev38444.service-now.com",
+  "proxy": "https://dev95536.service-now.com",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "rewire": "^4.0.1"
+    "rewire": "^4.0.1",
+    "tailwindcss": "^1.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "node build-config.js",
+    "build:css": "tailwind build src/App.css -o public/style.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
