--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "https://dev95536.service-now.com",
+  "secure": false,
   "dependencies": {
     "axios": "^0.18.0",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.9.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "rewire": "^4.0.1",
     "tailwindcss": "^1.4.6"
