--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.9.2",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "rewire": "^4.0.1",
