--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "react-dom": "^16.8.6",
     "react-materialize": "^3.9.2",
     "react-paginate": "^6.3.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
-    "rewire": "^4.0.1",
-    "tailwindcss": "^1.4.6"
+    "rewire": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
